--- a/public/en/acne.html
+++ b/public/en/acne.html
@@ -2,22 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>Acne Treatment with TCM | TAI TCM Zurich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR ACNE</h1>
-    <p>Professional content for ACNE coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
+    
+    <img src="../img/akupunktur-akne-zuerich.webp" alt="TCM treatment for Acne in Zurich" class="hero-img">
+
+    <h1>Natural Acne Relief – The TCM Path to Clear Skin</h1>
+
+    <h2>1. How does TCM understand acne?</h2>
+    <div class="highlight-box">
+        <p>From a TCM perspective, acne results from internal heat, hormonal imbalance, a damp diet, or Liver-Qi stagnation—often associated with an inflammatory tendency and stagnant Qi.</p>
+    </div>
+
+    <h2>2. Does acupuncture help with skin impurities?</h2>
+    <div class="highlight-box">
+        <p>Yes. It regulates hormones, cools the blood, and calms the mind—supporting the skin's self-healing process, especially for stress acne and cycle-related breakouts.</p>
+    </div>
+
+    <h2>3. How do herbs work for acne?</h2>
+    <div class="highlight-box">
+        <p>Chinese herbs have anti-inflammatory, detoxifying, and regulating effects—tailored to the skin type and internal pattern. Results usually appear after 4–6 weeks.</p>
+    </div>
+
+    <h2>4. Does stress play a role?</h2>
+    <div class="highlight-box">
+        <p>Definitely. Emotional burden disrupts the flow of Liver energy and promotes heat—which can directly affect the skin. TCM works here on two levels: physical and mental.</p>
+    </div>
+
+    <h2>5. What should one eat or avoid?</h2>
+    <div class="highlight-box">
+        <p>No sugar, no dairy, no fat—instead, opt for cooked vegetables, green teas, plenty of water, and moderate exercise. This doesn't just care for the skin; it relieves the burden on it.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Restore Your Skin's Radiance</h3>
+        <p>Book your appointment conveniently online via our Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Experts in Dermatology and Hormonal Balance</p>
     </div>
 </body>
 </html>
