--- a/public/de/nikotinentwoehnung.html
+++ b/public/de/nikotinentwoehnung.html
@@ -2,16 +2,65 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Behandlung</title>
+    <title>Raucherentwöhnung mit TCM | TAI TCM Zürich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON NIKOTINENTWOEHNUNG MIT TCM</h1>
-    <p>Hier den Text einfügen...</p>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
+    
+    <img src="../img/akupunktur-raucherentwoehnung-zuerich.webp" alt="TCM Raucherentwöhnung in Zürich" class="hero-img">
+
+    <h1>Raucherentwöhnung natürlich meistern – Ihr Weg in die Freiheit mit TCM</h1>
+
+    <h2>1. Wie versteht die TCM Raucherentwöhnung?</h2>
+    <div class="highlight-box">
+        <p>Rauchsucht wird als Sucht nach Hitze, Luftmangel und psychischer Anspannung verstanden. Ziel ist, Körper und Geist gleichzeitig zu regulieren und die „Hitze des Verlangens“ zu senken.</p>
+    </div>
+
+    <h2>2. Hilft Akupunktur wirklich beim Aufhören?</h2>
+    <div class="highlight-box">
+        <p>Ja. Besonders Ohrakupunktur (NADA-Protokoll) kann das Verlangen deutlich reduzieren, Nervosität lindern und Entzugserscheinungen wie Schlafstörungen oder Reizbarkeit abschwächen.</p>
+    </div>
+
+    <h2>3. Was bringen Kräuter?</h2>
+    <div class="highlight-box">
+        <p>Sie entgiften die Lunge, klären Schleim, beruhigen das Herz und fördern die Ausscheidung. Auch für Menschen mit Husten, Atemnot oder innerer Unruhe sehr empfehlenswert.</p>
+    </div>
+
+    <h2>4. Für wen eignet sich die Methode?</h2>
+    <div class="highlight-box">
+        <p>Für alle, die auf natürliche Weise ohne Nikotinersatz aufhören möchten – mit nachhaltiger Wirkung, ohne Gewichtszunahme oder innere Unruhe.</p>
+    </div>
+
+    <h2>5. Wie lange dauert die Behandlung?</h2>
+    <div class="highlight-box">
+        <p>Idealerweise 2–3 Sitzungen pro Woche über 3–6 Wochen. Wichtig ist zusätzlich: Stressabbau, Motivation, Bewegung, klare Ziele – dann ist der Weg in die Freiheit realistisch.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Starten Sie jetzt in ein rauchfreies Leben</h3>
+        <p>Vereinbaren Sie Ihren Termin bequem online über unseren Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>Weitere Informationen: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zürich | Spezialisten für Suchttherapie und Prävention</p>
+    </div>
 </body>
 </html>
